--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,71 +1,71 @@
-name: Test & Buid
+name: Test, Buid
 
 on:
   pull_request:
     branches: [ "master" ]
 
 env:
-  SolutionName: ApkReader
+  SolutionName: ${{github.event.repository.name}}
 
 jobs:
-  test_net_standard20_windows:
-    name: Testing .NET Standard v2.0 on Windows
+  test_net_windows:
+    name: Testing .NET (Windows)
     runs-on: windows-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
       with:
         submodules: true
     - name: Setup .NET
-      uses: actions/setup-dotnet@v3
+      uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: 6.0.x
-    - name: Restore dependencies
+        dotnet-version: 7.0.x
+    - name: Restoring dependencies
       run: dotnet restore ${{env.SolutionName}}.sln
-    - name: Test .NET Standard v2.0
+    - name: Testing .NET
       run: dotnet test ${{env.SolutionName}}.sln --no-build --verbosity normal
 
-  test_net_standard20_ubuntu:
-    name: Testing .NET Standard v2.0 on Ubuntu
+  test_net_ubuntu:
+    name: Testing .NET (Ubuntu)
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
       with:
         submodules: true
     - name: Setup .NET
-      uses: actions/setup-dotnet@v3
+      uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: 6.0.x
-    - name: Restore dependencies
+        dotnet-version: 7.0.x
+    - name: Restoring dependencies
       run: dotnet restore ${{env.SolutionName}}.sln
-    - name: Test .NET Standard v2.0
+    - name: Testing .NET
       run: dotnet test ${{env.SolutionName}}.sln --no-build --verbosity normal
 
-  build_net20:
-    name: Build .NET Framework v2.0 assembly
-    needs: [test_net_standard20_windows,test_net_standard20_ubuntu]
+  build_net_framework:
+    name: Building .NET Framework assembly
+    needs: [test_net_windows,test_net_ubuntu]
     runs-on: windows-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
       with:
         submodules: true
-    - name: Setup .NET
-      uses: microsoft/setup-msbuild@v1.1
-    - name: Build .NET v2.0
-      run: MSBuild -nologo -restore "${{github.workspace}}\${{env.SolutionName}}\${{env.SolutionName}}35.csproj" /property:Configuration=Release -property:OutputPath="${{github.workspace}}/bin/"
+    - name: Setup .NET Framework
+      uses: microsoft/setup-msbuild@v2
+    - name: Building .NET Framework
+      run: MSBuild -nologo -restore "${{github.workspace}}\${{env.SolutionName}}\${{env.SolutionName}}35.csproj" /property:Configuration=Release -property:SignAssembly=false -property:OutputPath="${{github.workspace}}/bin/"
 
-  build_net_standard20:
-    name: Build .NET Standard v2.0 assembly
-    needs: [test_net_standard20_windows,test_net_standard20_ubuntu]
+  build_net:
+    name: Building .NET assembly
+    needs: [test_net_windows,test_net_ubuntu]
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
       with:
         submodules: true
     - name: Setup .NET
-      uses: actions/setup-dotnet@v3
+      uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: 6.0.x
-    - name: Restore dependencies
+        dotnet-version: 7.0.x
+    - name: Restoring dependencies
       run: dotnet restore ${{env.SolutionName}}.sln
-    - name: Build .NET Standard v2.0
-      run: dotnet build "${{github.workspace}}\${{env.SolutionName}}\${{env.SolutionName}}.csproj" --configuration Release --no-restore /p:OutputPath="../bin/" /p:DocumentationFile="../bin/${{env.SolutionName}}.xml"
+    - name: Building .NET
+      run: dotnet build "${{github.workspace}}\${{env.SolutionName}}\${{env.SolutionName}}.csproj" --configuration Release --no-restore /p:OutputPath="../bin/" /p:SignAssembly=false /p:DocumentationFile="../bin/${{env.SolutionName}}.xml"
